# Trading-12

./: README.md  bot.py  main.py  pyTelegramBotAPI requests matplotlib  pyproject.toml  requirements.txt
trading-bot/: Procfile
